# Zodiac

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  setup_skeleton.sh
schemas/: persona.json  tool.json
src/: main.py
src/agents/: agent.py  executor.py
src/core/: __init__.py  config.py  event_bus.py  logging.py  registry.py  system.py  workspace.py
src/memory/: manager.py
src/models/: catalog.py  manager.py
src/personas/: loader.py  manager.py  null_persona.py  runtime.py
src/tools/: launcher.py  manager.py  permissions.py  protocol.py
src/tui/: app.py  layout_loader.py
src/tui/widgets/: chat.py  registry.py  shop.py  sidebar.py
workspaces/default/: manifest.json
workspaces/default/constellations/: single_agent_chat.json  test_dag.json
workspaces/default/layouts/: default.json
workspaces/default/personas/: assistant.lua
workspaces/default/themes/: dark.tcss
workspaces/default/tools/alarm_tool/: Cargo.toml  alarm_tool  build.sh  manifest.json
workspaces/default/tools/alarm_tool/src/: main.rs
workspaces/default/tools/echo_tool/: manifest.json  run.sh
