[project]
name = "zodiac"
version = "0.5.5"
description = "Terminal-first AI workspace framework"
requires-python = ">=3.11"
dependencies = [
    "llama-cpp-python>=0.2.0",
    "jsonschema>=4.0.0",
    "lupa>=2.0",
    "textual>=0.47.0",
    "psutil>=5.9.0",
    "huggingface_hub>=0.20.0"
]